--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-    max-width: 1440px;
     background-color: hsl(30, 54%, 90%);
 }
 
@@ -7,4 +6,61 @@ main {
     background-color: white;
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
+    width: fit-content;
+    justify-content: center;
+    border-radius: 10px;
+    padding: 30px;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+main p {
+    font-family: "Outfit";
+    font-size: 16px;
+}
+
+main h1, main h2 {
+    font-family: "Young Serif";
+    font-weight: 400;
+    color: hsl(14, 45%, 36%);
+}
+
+header img {
+    justify-content: center;
+}
+
+img {
+    width: 700px;
+    border-radius: 10px;
+}
+
+.prep-time {
+    background-color: hsl(330, 100%, 98%);
+    padding-left: 20px;
+    line-height: 13px;
+    font-family: "Outfit";
+    border-radius: 7px;
+
+}
+
+.prep-time h3 {
+    color: hsl(332, 51%, 32%);
+}
+
+ol {
+    list-style: arabic hsl(14, 45%, 36%);
+}
+
+.grid-container {
+    display: grid;
+    row-gap: 1px;
+    grid-template-columns: auto auto;
+}
+
+.grid-container > p {
+    text-align: center;
+    font-weight: 700;
+    color: hsl(14, 45%, 36%);
 }
