--- a/style.css
+++ b/style.css
@@ -12,16 +12,16 @@ main {
     border-radius: 10px;
     padding: 30px;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 100px;
     margin-bottom: 50px;
 }
 
 main p {
     font-family: "Outfit";
     font-size: 16px;
+    color: hsl(30, 10%, 34%);
 }
-
-main h1, main h2 {
+main h2 {
     font-family: "Young Serif";
     font-weight: 400;
     color: hsl(14, 45%, 36%);
